edit esekShare in albumedit
