# server/src/services/album.service.ts
@@ -149,6 +149,7 @@ export class AlbumService extends BaseService {
       albumThumbnailAssetId: dto.albumThumbnailAssetId,
       isActivityEnabled: dto.isActivityEnabled,
       order: dto.order,
+      esekShared: dto.esekShared,
     });
 
     return mapAlbumWithoutAssets(updatedAlbum);
